# GCS2

./: .gitignore  CMakeLists.txt
app/: AppBootstrap.cpp  AppBootstrap.h  main.cpp
config/: default_settings.json
core/application/controllers/: VehicleController.cpp  VehicleController.h
core/communication/protocol/: CustomProtocol.cpp  CustomProtocol.h  IProtocol.h
core/communication/session/: LinkSession.cpp  LinkSession.h
core/communication/transport/: ITransport.h  SerialTransport.cpp  SerialTransport.h
core/domain/: AircraftState.h  FlightMode.h  TelemetrySnapshot.h
core/services/: CommandService.cpp  CommandService.h  TelemetryService.cpp  TelemetryService.h
docs/: README.md
ui/main_window/: MainWindow.cpp  MainWindow.h
ui/panels/: CommunicationPanel.cpp  CommunicationPanel.h  DashboardPanel.cpp  DashboardPanel.h
